--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,8 +22,10 @@
       I18n.defaultLocale = "#{I18n.default_locale}"
       I18n.locale = "#{I18n.locale}"
       MAPS_API_KEY = "#{ENV['MAPS_API_KEY']}"
-    #wrap
-      = render 'layouts/header'
+    #wrap{class: yield(:wrapper_classes)}
+      - skip_header = yield(:skip_header).presence || false
+      - unless skip_header
+        = render 'layouts/header'
 
       - if flash.count > 0
         .container.top-buffer
