--- a/app/assets/stylesheets/blocks/_button-jelly.scss
+++ b/app/assets/stylesheets/blocks/_button-jelly.scss
@@ -1,4 +1,8 @@
 .button--jelly {
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14),
+              0 1px 7px 0 rgba(0, 0, 0, 0.12),
+              0 3px 1px -1px rgba(0, 0, 0, 0.2);
+
   -webkit-transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
           transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
 }
