fixed locale key

--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -84,9 +84,9 @@
               %th= t('activerecord.attributes.track.id')
               %th= t('activerecord.attributes.track.suit')
               %th= t('activerecord.attributes.track.place')
-              %th.text-right= t('disciplinse.distance')
-              %th.text-right= t('disciplinse.speed')
-              %th.text-right= t('disciplinse.time')
+              %th.text-right= t('disciplines.distance')
+              %th.text-right= t('disciplines.speed')
+              %th.text-right= t('disciplines.time')
               %th= t('activerecord.attributes.track.comment')
               %th.text-right= t('activerecord.attributes.track.recorded_at')
               %th
