added missing places controller

--- a/app/views/static_pages/manage.html.haml
+++ b/app/views/static_pages/manage.html.haml
@@ -2,6 +2,9 @@
   .row.top-buffer
     .col-sm-12
       = link_to 'Sidekiq Monitoring', sidekiq_web_path
+    .col-sm-12
+      = link_to 'Missing places', missing_places_path
+
   .row
     .col-sm-4
       %h2= 'Костюмы'
