change profile avatar with ability to crop

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  *= require ion.rangeSlider.skinFlat
  *= require_self
  *= require normalize.min
+ *= require jquery.Jcrop
  */
 
 @import 'bootstrap_variables_overrides';
