--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -4,40 +4,45 @@
   width: 40px;
 }
 
-.userpic-container {
+.user-avatar {
+  margin-top: 20px;
+  text-align: center;
   position: relative;
-}
-
-#userpic {
-  max-height:100%;
-  max-width:100%;
-}
-
-#userpic-large {
-  min-height: 150px;
-  min-width: 150px;
-}
-
-#userpic-preview, #userpic {
-  min-height: 150px;
-  min-height: 150px;
-}
-
-.div-preview {
   height: 150px;
   width: 150px;
-  overflow: hidden;
 }
 
-.edit-userpic {
-  cursor: pointer;
-  top: 100%;
-  left: 0%;
+.user-avatar__change {
+  display: block;
   position: absolute;
-  background-color: rgba(255,255,255,0.7);
-  height: 20px;
+  left: 0;
+  bottom: 0;
+  border: transparent solid 0px;
+  outline: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
   width: 100%;
-  margin-top: -20px;
+
+  &:hover, &:focus {
+    text-decoration: none;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+}
+
+.avatar-edit__title {
+  color: #777;
+  font-size: 20px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  text-align: left;
+}
+
+.avatar-edit__preview-container {
+  height: 150px;
+  width: 150px;
+  border-radius: 2px;
+  overflow: hidden;
 }
 
 .gold {
