fixed safari issues with jcrop

--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -30,6 +30,11 @@
   }
 }
 
+.avatar-edit__crop {
+  max-height: 292;
+  max-width: 390;
+}
+
 .avatar-edit__title {
   color: #777;
   font-size: 20px;
