--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -11,11 +11,23 @@
             %i.fa.fa-pencil
             = t('general.edit')
 
+          - if policy(@profile).destroy?
+            = link_to t('general.delete'),
+                      @profile,
+                      method: :delete,
+                      remote: true,
+                      data: { confirm: 'Are you sure you want to delete this profile?' },
+                      class: 'btn-flat text-danger'
+
+
           - if @profile.user && policy(@profile).masquerade?
             = link_to new_user_masquerades_path(@profile.user), class: 'btn-flat' do
               %i.fa.fa-magic
               Masquerade
 
+          - if policy(@profile).merge?
+            = link_to new_profile_merge_path(@profile), remote: true, class: 'btn-flat' do
+              Merge
     .row
       .col-sm-2.col-md-2
         .user-avatar
