--- a/app/views/events/competitors/_competitor_cells.html.haml
+++ b/app/views/events/competitors/_competitor_cells.html.haml
@@ -1,4 +1,3 @@
-- can_manage = can?(:manage, competitor) && !@event.finished?
 %td.competitor-cell
   = link_to competitor.name.titleize,
             profile_path(competitor.profile),
@@ -6,7 +5,7 @@
   %span.competitor-suit
     = competitor.wingsuit.manufacturer_code
     = competitor.wingsuit_name
-  - if can_manage
+  - if policy(@event).update? && !@event.finished?
     %span.competitor-controls
       = button_to event_competitor_path(@event, competitor), 
                   method: :delete, 
