--- a/app/views/events/event_organizers/_event_organizer.html.haml
+++ b/app/views/events/event_organizers/_event_organizer.html.haml
@@ -1,7 +1,7 @@
 %li.organizer{id: dom_id(event_organizer)}
   %span
     = event_organizer.name
-  - if can?(:delete, event_organizer) 
+  - if policy(@event).update? && !@event.finished?
     = button_to event_event_organizer_path(@event, event_organizer),
                 method: :delete,
                 remote: true,
