--- a/app/views/events/scoreboards/_hungary_boogie.html.haml
+++ b/app/views/events/scoreboards/_hungary_boogie.html.haml
@@ -2,7 +2,7 @@
          I18n.locale,
          @event, 
          (@display_raw_results ? 'raw' : ''), 
-         (can? :update, @event)] do
+         (policy(@event).update?)] do
   %table.table.table-bordered#results-table
     %thead
       %tr#disciplines-row
@@ -20,7 +20,7 @@
           - rounds.each do |round|
             %td.round-cell.text-center
               = round.name
-              - if can?(:delete, round) && !@event.finished?
+              - if policy(@event).update? && !@event.finished?
                 = button_to event_round_path(@event, round),
                             method: :delete,
                             remote: true,
@@ -69,7 +69,7 @@
                                 rel: 'nofollow' do
                         %i.fa.fa-search
 
-                      - if can?(:manage, result_entity) && !@event.finished?
+                      - if policy(@event).update? && !@event.finished?
                         = link_to edit_event_event_track_path(@event, result_entity),
                                   remote: true,
                                   'data-params': { display_raw_results: display_raw_results }.to_param,
@@ -78,7 +78,7 @@
                           %i.fa.fa-pencil
 
 
-                - elsif can?(:update, @event) && !@event.finished?
+                - elsif policy(@event).update? && !@event.finished?
                   %td.text-center.create-result-cell
                     = link_to new_event_event_track_path(@event), 
                               remote: true, 
