--- a/app/views/static_pages/_online_competitions_section.html.haml
+++ b/app/views/static_pages/_online_competitions_section.html.haml
@@ -1,37 +1,38 @@
-- if @online_competitions.many?
-  .container.top-buffer
-    .row
-      .col-sm-12.text-center
-        %h1.light-header= t('static_pages.index.online_comps_leaders')
-    - @online_competitions.each do |activity, competitions|
-      %hr
+- cache "online_competitions_summary_#{I18n.locale}", expires_in: 4.hour do
+  - if @online_competitions.many?
+    .container.top-buffer
       .row
         .col-sm-12.text-center
-          %h2.light-header= {'base' => 'BASE Challenge', 'skydive' => 'Skydive Challenge'}[activity]
-      .row
-        - competitions.each do |competition|
-          .col-sm-4
-            .start-page-competition
-              .start-page-competition-header.text-center
-                = link_to competition.name, virtual_competition_path(competition)
-              .competition-results
-                - competition.personal_top_scores.first(3).each do |competition_leader|
-                  - place_class = [:gold_place, :silver_place, :bronze_place][competition_leader.rank - 1]
-                  .row.start-page-competition-result{class: place_class}
-                    - profile = competition_leader.profile
-                    .col-sm-4
-                      = image_tag(profile.userpic.url(:medium), 
-                                  class: 'img-responsive img-circle')
-                    .col-sm-8
-                      = link_to profile.name.titleize,
-                                profile_path(profile),
-                                class: 'vc-profile-name',
-                                'data-toggle' => 'tooltip',
-                                title: t('virtual_competitions.show.show_profile')
-                      %div
-                        = link_to track_path(competition_leader.track),
-                                  class: 'vc-result-link',
+          %h1.light-header= t('static_pages.index.online_comps_leaders')
+      - @online_competitions.each do |activity, competitions|
+        %hr
+        .row
+          .col-sm-12.text-center
+            %h2.light-header= {'base' => 'BASE Challenge', 'skydive' => 'Skydive Challenge'}[activity]
+        .row
+          - competitions.each do |competition|
+            .col-sm-4
+              .start-page-competition
+                .start-page-competition-header.text-center
+                  = link_to competition.name, virtual_competition_path(competition)
+                .competition-results
+                  - competition.personal_top_scores.first(3).each do |competition_leader|
+                    - place_class = [:gold_place, :silver_place, :bronze_place][competition_leader.rank - 1]
+                    .row.start-page-competition-result{class: place_class}
+                      - profile = competition_leader.profile
+                      .col-sm-4
+                        = image_tag(profile.userpic.url(:medium), 
+                                    class: 'img-responsive img-circle')
+                      .col-sm-8
+                        = link_to profile.name.titleize,
+                                  profile_path(profile),
+                                  class: 'vc-profile-name',
                                   'data-toggle' => 'tooltip',
-                                  title: t('virtual_competitions.show.show_details') do
-                          %span.vc-result= format_result(competition_leader.result, competition)
-                          %span.vc-unit= competition_unit(competition)
+                                  title: t('virtual_competitions.show.show_profile')
+                        %div
+                          = link_to track_path(competition_leader.track),
+                                    class: 'vc-result-link',
+                                    'data-toggle' => 'tooltip',
+                                    title: t('virtual_competitions.show.show_details') do
+                            %span.vc-result= format_result(competition_leader.result, competition)
+                            %span.vc-unit= competition_unit(competition)
