--- a/app/views/tournaments/matches/_match.html.haml
+++ b/app/views/tournaments/matches/_match.html.haml
@@ -1,5 +1,5 @@
 - spacers ||= 0
-- unless match.bronze_finals
+- unless match.bronze_finals?
   - spacers.times do
     .tournament-spacer
 .tournament-match.text-right
@@ -10,11 +10,15 @@
     = link_to tournament_match_globe_path(@tournament, match), remote: true, class: 'tournament-match-map text-muted' do
       %i.fa.fa-compass
       3D map
+    - if policy(@tournament).update?
+      = link_to edit_tournament_match_path(@tournament, match), remote: true, class: 'tournament-match-map text-muted' do
+        %i.fa.fa-pencil
+        = t('general.edit')
     .panel-body.competitors-container
       - match.slots.each do |competitor|
         .tournament-competitor.row
           .col-sm-9.text-left
-            - if match.gold_finals || match.bronze_finals
+            - if match.gold_finals? || match.bronze_finals?
               - if competitor.earn_medal
                 %i.fa.fa-fw.fa-certificate{class: competitor.earn_medal}
               - else
@@ -41,6 +45,6 @@
           .col-sm-9.text-left.text-muted
             ?
           .col-sm-3.text-right
-- unless match.gold_finals || match.bronze_finals
+- unless match.gold_finals? || match.bronze_finals?
   - spacers.times do
     .tournament-spacer
