--- a/app/views/static_pages/index.html+mobile.haml
+++ b/app/views/static_pages/index.html+mobile.haml
@@ -1,7 +1,34 @@
 .index-header
   .index-header-caption
     %p.index-subtitle
-      The most advanced flight analisys
+      = t('static_pages.index.desc')
 
-.free-banner
-  Free
+.index-description
+  .description
+    .description__image
+      %i.fa.fa-line-chart.fa-3x
+    .description__title
+      Анализ трeков
+    .description__text
+      После прыжка вас ожидает комплексный набор показателей эффективности &mdash;
+      от основных, таких как скорость, дистанция, качество, до воздействия ветра
+      и результат за вычетом ветра.
+
+  .description
+    .description__image
+      %i.fa.fa-heart.fa-3x
+    .description__title
+      Это бесплатно
+    .description__text
+      Мы верим, что предоставляя Skyderby бесплатно мы совершенствуем наш любимый
+      спорт и делаем мир лучше, мы любим и ценим ваши отзывы.
+
+  .description
+    .description__image
+      %i.fa.fa-trophy.fa-3x
+    .description__title
+      Проведение соревнований
+    .description__text
+      Проведение и судейство соревнований никогда не было настолько доступным и простым.
+      Не имеет значения, проводите ли вы соревнования мирового масштаба или готовитесь
+      к соревнованиям с друзьями.
