--- a/app/views/layouts/_header.html+mobile.haml
+++ b/app/views/layouts/_header.html+mobile.haml
@@ -9,7 +9,7 @@
       = link_to t('application.header.home'), root_path, class: 'navbar-brand'
 
     .navbar-collapse.collapse
-      %ul.nav.navbar-nav
+      %ul.nav.navbar-nav.text-center
         - root_controller = controller.controller_path.split('/').first
         %li.navbar__link{class: ('navbar__link--active' if root_controller == 'tracks')}
           = link_to t('application.header.tracks'), tracks_path
@@ -17,6 +17,9 @@
           = link_to t('application.header.competitions'), events_path
         %li.navbar__link{class: ('navbar__link--active' if root_controller == 'virtual_competitions')}
           = link_to t('application.header.online_competitions'), virtual_competitions_path 
+        - if !user_signed_in?
+          %li.navbar__link
+            = link_to t('application.header.sign_in'), new_user_session_path
            
       %ul.nav.navbar-nav.navbar-right
 
