--- a/app/views/static_pages/index.html+mobile.haml
+++ b/app/views/static_pages/index.html+mobile.haml
@@ -5,8 +5,8 @@
 
 .index-description
   .description
-    .description__image
-      %i.fa.fa-line-chart.fa-3x
+    .description__image.description__image--blue
+      %i.fa.fa-line-chart
     .description__title
       Анализ трeков
     .description__text
@@ -15,8 +15,8 @@
       и результат за вычетом ветра.
 
   .description
-    .description__image
-      %i.fa.fa-heart.fa-3x
+    .description__image.description__image--red
+      %i.fa.fa-heart
     .description__title
       Это бесплатно
     .description__text
@@ -24,8 +24,8 @@
       спорт и делаем мир лучше, мы любим и ценим ваши отзывы.
 
   .description
-    .description__image
-      %i.fa.fa-trophy.fa-3x
+    .description__image.description__image--yellow
+      %i.fa.fa-trophy
     .description__title
       Проведение соревнований
     .description__text
